--- a/Samples/Advanced Components/00 seed/app/app.component.html
+++ b/Samples/Advanced Components/00 seed/app/app.component.html
@@ -1,12 +1,3 @@
 <h1>Hello Angular</h1>
 
-<div class="buttons">
-    <button>Refresh</button>
-</div>
-
-<ul>
-    <li>Option 1</li>
-    <li>Option 2</li>
-</ul>
-
-<my-contact-list></my-contact-list>
+<button (click)="compileModule()">Compile a module</button>
