--- a/Samples/Advanced Components/22 Custom pipe (filter)/app/app.component.html
+++ b/Samples/Advanced Components/22 Custom pipe (filter)/app/app.component.html
@@ -8,5 +8,5 @@
     </li>
 </ul>
 
-<button (click)="none()">None</button>
-<button (click)="change()">Change</button>
+<button (click)="change()">Change Detection</button>
+<button (click)="add()">Add</button>
